Minor improvements and finalised tests for teacher domain