@@ -5,7 +5,6 @@ import javax.ws.rs.core.Response;
 import javax.ws.rs.ext.ExceptionMapper;
 import javax.ws.rs.ext.Provider;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Provider
 public class ConstraintViolationExceptionMapper implements ExceptionMapper<ConstraintViolationException> {
@@ -14,7 +13,7 @@ public class ConstraintViolationExceptionMapper implements ExceptionMapper<Const
     public Response toResponse(ConstraintViolationException e) {
         List<ErrorResponse.ErrorMessage> errorMessages = e.getConstraintViolations().stream()
                 .map(constraintViolation -> new ErrorResponse.ErrorMessage(constraintViolation.getPropertyPath().toString(), constraintViolation.getMessage()))
-                .collect(Collectors.toList());
+                .toList();
         return Response.status(Response.Status.BAD_REQUEST).entity(new ErrorResponse(errorMessages)).build();
     }
 
